# The-Oracle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
Documentation/: Eight_Card_System.md  MUSIC_SYSTEM.md
activity-ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
ai-dm-sicord-bot/: LAVALINK_SETUP.md  MODULE_ARCHITECTURE.md  application.yml  backend_integration.py  cc_wizard.py  character_creation.py  character_display.py  dm_commands.py  event_handlers.py  freesound_client.py  game_session.py  music_control.py  music_player.py  oracle-dm-discord-bot-old.py  oracle-dm-discord-bot.py  session_channels.py
bastion/: __init__.py  catalog.py  demo.py  models.py  turn.py
combat/: __init__.py  demo.py  engine.py  models.py  tracker.py
dice/: __init__.py  demo.py  mechanics.py  roller.py
dm_guide/: __init__.py  dc.py  demo.py  encounter.py  guidance.py  motifs.py
docs/: ACTIVITY_SETUP.md
economy/: __init__.py  currency.py  demo.py  downtime.py  lifestyle.py  models.py
eight_card_system/: __init__.py  cartographer.py  census.py  demo.py  entropy.py  extraction.py  geo.py  giant_enclaves.py  graph.py  hex_math.py  mapmaker.py  models.py  pantheon.py  relationships.py  renderer.py  seed.py  shops.py  terrain_gen.py
game_config/: __init__.py  config.py  demo.py  game_settings.json
games/: __init__.py  catalog.py  cheat.py  demo.py  models.py  suspicion.py
hazards/: __init__.py  catalog.py  demo.py  engine.py  models.py
imagery/: MODELS.md  (+8 more)
(+97 files in other folders)
